--- a/index.html
+++ b/index.html
@@ -1,17 +1,64 @@
- <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Your front-end</title>
-</head>
+const express = require('express')
+const app = express();
+var FastText = require('node-fasttext');
+const cors = require('cors');
 
-<body>
-<form action="/fasttext">
-	Enter your text to be classified<br>
-	<input type="text" name="statement">
-	<input type="submit" value="Submit">
-</form> 
+let config = { 
+  dim: 100,
+  input: "train.txt",
+  output: "model"
+}
 
-</body>
 
-</html> 
+
+
+FastText.train("supervised", config, function (success, error) {
+
+  if(error) {
+    console.log(error)
+    return;
+  }
+  
+  console.log(success)
+  
+})
+
+app.use(cors())
+
+app.get('/', (req, res) => {
+  res.sendfile("index.html");
+});
+
+app.get('/fasttext/', function(req, res) {
+  var statement = req.param('statement');
+    res.send(getFastTextResults(statement));
+});
+
+function getFastTextResults(statement) {
+	//predict returns an array with the input and predictions for best cateogires
+	var output=null;
+	
+	FastText.predict(
+		"model.bin", 3,
+		[statement],
+		function (success, error) {
+
+		  if(error) {
+			console.log(error)
+			return;
+		  }
+		  output=success
+		  
+		})
+
+
+	return output;
+}
+
+
+
+         
+
+app.listen(8000, () => {
+  console.log('Listening on port 8000!')
+});
